kubernetes/prod/app-prod-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-prod
  labels:
    app: flask-api-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api-prod
  template:
    metadata:
      labels:
        app: flask-api-prod
    spec:
      containers:
        - name: flask
          image: ssinghal37/ml_flask_app:1.0
          ports:
            - containerPort: 5000
