kubernetes/prod/app-prod-deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db-prod
  labels:
    app: redis-db-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-db-prod
  template:
    metadata:
      labels:
        app: redis-db-prod
    spec:
      containers:
        - name: redis
          image: redis:7
          args: ["--save", "1", "1"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: "/data"
              name: redis-data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data-prod
