kubernetes/prod/app-prod-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-prod
# random easter egg :D
spec:
  selector:
    app: flask-api-prod
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
