kubernetes/prod/app-prod-service-nodeport-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-prod
spec:
  type: NodePort
  selector:
    app: flask-api-prod
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
