kubernetes/prod/app-prod-ingress-flask.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: flask-ingress-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "flight-api.coe332.tacc.cloud"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-nodeport-prod
                port:
                  number: 5000
